New ff9 PDF generation
Signed-off-by: SkeptRaiser <bruno.lesieur@gmail.com>

--- a/views/index.htm
+++ b/views/index.htm
@@ -19,9 +19,9 @@
         </div>
         <div class="container">
             <h2>HTML Render</h2>
-            <p><a href="./pdf/" target="_blank">See the HTML page render</a></p>
+            <p><a href="./ff9-guide-mots-de-passe-playonline-francais/" target="_blank">See the HTML page render</a></p>
             <h2>PDF Render</h2>
-            <p><a href="./generator/" target="_blank">See the PDF page render</a></p>
+            <p><a href="./ff9-guide-mots-de-passe-playonline-francais/pdf/" target="_blank">See the PDF page render</a></p>
         </div>
     </body>
 </html>
